# django-orm-watching-storage

./: .gitignore  README.md  pyproject.toml  requirements.txt
datacenter/: active_passcards_view.py  models.py  passcard_info_view.py  storage_information_view.py
datacenter/migrations/: README.rst
project/: settings.py
