[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ilya Osipov <070809010@mail.ru>"]
description = ""
name = "django-orm-standalone-5"
version = "0.1.0"
[tool.poetry.dependencies]
django = [
	{ version = ">=1.11.0 <1.11.18", python = ">=3.4.0 <3.7.0" },
	{ version = ">=1.11.18 <1.12.0", python = "3.7.*" }
]
psycopg2-binary = "2.8.*"
python-dotenv = {version = "0.19.*", python = ">=3.5"}
python = ">= 3.4.0 <3.8.0"
[tool.poetry.dev-dependencies]
